--- a/index.html
+++ b/index.html
@@ -1,13 +1,21 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="css/style.css">
     <title>Document</title>
 </head>
+
 <body>
     <h1> Cours Git</h1>
-    
+    <p> Lorem, ipsum dolor sit amet consectetur adipisicing elit. Modi sapiente, reprehenderit labore suscipit similique
+        quaerat alias harum animi recusandae laboriosam unde a vel veniam distinctio deserunt omnis minus soluta!
+        Sapiente, odit placeat. Itaque vel, esse temporibus tempora natus aperiam impedit libero a fugit. Fugit
+        consequatur facilis sequi cumque repudiandae tempore.</p>
+
 </body>
+
 </html>
